<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Guinea Track</string>
    <string name="title_activity_guinea_pig_detail">Characteristics</string>
    <string name="title_activity_guinea_pig_add">New Guinea Pig</string>
    <string name="title_activity_backup_recovery">Backup and Recovery</string>
    <string name="title_activity_settings">Settings</string>
    <string name="main_activity_subtitle">M:%1$d F:%2$d C:%3$d</string>
    <string name="set">Set</string>
    <string name="menu_item_backup_restore">Backup and Recovery</string>
    <string name="menu_item_settings">Settings</string>
    <string name="import_guinea_pigs">Import guinea pigs</string>
    <string name="export_guinea_pigs">Backup guinea pigs</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="reset">Reset</string>
    <string name="confirm">Confirm</string>
    <string name="change_picture">Change Picture</string>
    <string name="guinea_pig_name">Name:</string>
    <string name="guinea_pig_breed">Breed:</string>
    <string name="guinea_pig_color">Color:</string>
    <string name="guinea_pig_birthday">Birthday:</string>
    <string name="guinea_pig_gender">Gender:</string>
    <string name="guinea_pig_type">Type:</string>
    <string name="guinea_pig_weight">Weight (in gram):</string>
    <string name="guinea_pig_limitations">Limitations:</string>
    <string name="guinea_pig_origin">Origin:</string>
    <string name="guinea_pig_castration_date">Castrated at:</string>
    <string name="guinea_pig_entry">Moves in:</string>
    <string name="guinea_pig_departure">Departure:</string>
    <string name="optional_field"> (optional)</string>
    <string name="title_activity_edit">Edit Guinea Pig</string>
    <string name="image_description">No picture available</string>
    <string name="pick_picture">Pick new picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="last_birth">Last Birth (Date):</string>
    <string name="guinea_pig_due_date">Due date:</string>
    <string name="unknown" translatable="false">-</string>
    <string name="guinea_pig_identifier" translatable="false">guinea pig</string>
    <string name="editor_mode_flag" translatable="false">editor_mode</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="castrato">Castrato</string>
    <string name="type_sale">Sale</string>
    <string name="type_breed">Breed</string>
    <string name="type_rescue">Rescue</string>
    <string name="type_collector">Collector</string>
    <string name="date_picker_title">Pick a date</string>
    <string name="no_limitations">No limitation</string>
    <string name="successful_import">Guinea pigs were successfully imported.</string>
    <string name="successful_export">Backup of guinea pigs was successfully.</string>
    <string name="export_import_instruction">If you want to backup your guinea track data, press the button \"Backup Guinea Pigs\". This will create a backup file on your device. If you want to transfer your data to another phone, simply move the guinea track folder with the back up file to your new phone and press the button \"Import guinea pigs\" on the new device.</string>

    <!-- Settings -->
    <string name="settings_introduction">Customize how guinea track looks here. Select fields you need for your daily use or deselect fields you do not wish to see in this app.</string>
    <string name="settings_weight">Show weight input field</string>
    <string name="settings_origin_text">Show origin input field</string>
    <string name="settings_limitations_text">Show limitations input field</string>
    <string name="settings_entry_text">Show moves in input field</string>
    <string name="show_departure_input_field">Show departure input field</string>
    <string name="settings_castration_text">Show castration date input field</string>
    <string name="settings_last_birth_text">Show last birth date input field</string>
    <string name="settings_due_date_text">Show due date inpute field</string>
</resources>
