<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guinea_pig_name"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_name_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/edit_input_left_margin"
                        android:layout_marginStart="@dimen/edit_input_left_margin"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:inputType="text" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/guinea_pig_gender"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/edit_gender_spinner"
                        android:layout_width="@dimen/edit_spinner_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:layout_marginLeft="@dimen/edit_input_left_margin"
                        android:layout_marginStart="@dimen/edit_input_left_margin" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guinea_pig_weight"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_weight_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/edit_input_left_margin"
                        android:layout_marginStart="@dimen/edit_input_left_margin"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:inputType="number" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/optional_field" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guinea_pig_birthday"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_birth_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/edit_input_left_margin"
                        android:layout_marginStart="@dimen/edit_input_left_margin"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:inputType="date" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guinea_pig_color"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_color_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/edit_input_left_margin"
                        android:layout_marginStart="@dimen/edit_input_left_margin"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:inputType="text" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guinea_pig_breed"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_breed_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/edit_input_left_margin"
                        android:layout_marginStart="@dimen/edit_input_left_margin"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:inputType="text" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/guinea_pig_type"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/edit_type_spinner"
                        android:layout_width="@dimen/edit_spinner_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:layout_marginLeft="@dimen/edit_input_left_margin"
                        android:layout_marginStart="@dimen/edit_input_left_margin" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guinea_pig_origin"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_origin_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/edit_input_left_margin"
                        android:layout_marginStart="@dimen/edit_input_left_margin"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:inputType="text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/optional_field" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guinea_pig_limitations"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_limitations_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/edit_input_left_margin"
                        android:layout_marginStart="@dimen/edit_input_left_margin"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:inputType="text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/optional_field" />
                </TableRow>

                <TableRow android:id="@+id/edit_castration_row">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guinea_pig_castration_date"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_castration_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/edit_input_left_margin"
                        android:layout_marginStart="@dimen/edit_input_left_margin"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:inputType="date" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/optional_field" />
                </TableRow>

                <TableRow
                    android:id="@+id/edit_last_birth_row"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_birth"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_last_birth_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/edit_input_left_margin"
                        android:layout_marginStart="@dimen/edit_input_left_margin"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:inputType="date" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/optional_field" />

                </TableRow>

                <TableRow
                    android:id="@+id/edit_due_date_row"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guinea_pig_due_date"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_due_date_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/edit_input_left_margin"
                        android:layout_marginStart="@dimen/edit_input_left_margin"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:inputType="date" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/optional_field" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:id="@+id/picture_select_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="start"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/edit_image"
                    android:layout_width="@dimen/edit_image_width"
                    android:layout_height="@dimen/edit_image_height"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:adjustViewBounds="true"
                    android:background="@color/primary_color"
                    android:scaleType="centerCrop" />

                <Button
                    android:id="@+id/edit_add_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/picture_button"
                    android:text="@string/change_picture"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>